# obs-advanced-masks

./: CMakeLists.txt  README.md  buildspec.json  installer.iss.in
.github/scripts/utils.zsh/: check_packages
.github/workflows/: build.yml
cmake/: ObsPluginHelpers.cmake
data/locale/: en-US.ini  es-ES.ini  pt-BR.ini  zh-CN.ini
data/shaders/: boom-so-much-mask.effect  chroma-key.effect  circle-mask.effect  common.effect  ellipse-mask.effect  feather-mask.effect  gradient-mask.effect  heart-mask.effect  jump-flood.effect  polygon-mask.effect  rectangular-mask.effect  source-mask.effect  star-mask.effect  super-key.effect  superformula-mask.effect  svg-mask.effect
src/: advanced-masks-filter.c  advanced-masks-filter.h  advanced-masks.h  base-filter.h  color-adjustments.c  color-adjustments.h  mask-bsm.c  mask-bsm.h  mask-chroma-key.c  mask-chroma-key.h  mask-feather.c  mask-feather.h  mask-font-awesome.cpp  mask-font-awesome.hpp  mask-gradient.c  mask-gradient.h  mask-shape.c  mask-shape.h  mask-source.c  mask-source.h  mask-svg.c  mask-svg.h  obs-advanced-masks-plugin.c  obs-utils.c  obs-utils.h  svg-utils.cpp  svg-utils.hpp  utils.c  utils.h  version.h
